test/TestSuite/Syntax/Errors/extend_id_cap.tjp
project test "Test" "1.0" 2007-03-25 +2m {
	extend task {
# MARK: error 4 extend_id_cap
		text foo
	}
}

